# uSoundLibPrototype

./: LICENSE  README.md
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/engine/: AudioEngine.cpp  AudioEngine.h  AudioEngineWin.cpp  AudioEngineWin.h  CommandQueue.h  RtSafe.h
app/src/main/cpp/graph/: AudioBuffer.h  AudioNode.h  ChannelRouterNode.h  MixerNode.h  MonoGainNode.h  NoiseNode.h  OutputNode.h  SineNode.h
app/src/main/cpp/jni/: NativeBridge.cpp  NativeBridgeWin.cpp
app/src/main/cpp/offline/: OfflineEngine.cpp  OfflineEngine.h
app/src/main/cpp/python_bindings/: py_audioengine.cpp
app/src/main/java/com/usound/audio/: AppCompatActivity.kt  NativeBridge.kt
app/src/main/python/: CMakeLists.txt  build.py
